# gstoscplayer

./: CMakeLists.txt  README.md  config.h  main.c
.github/workflows/: cmake.yml
